--- a/ea01/ea01.tex
+++ b/ea01/ea01.tex
@@ -184,7 +184,8 @@ Perimeter: 16
     Hatókör feloldó operátor (\texttt{::})
     \begin{itemize}
         \item Adott névtér elemeinek eléréséhez (pl. \texttt{std::cout})
-        \item Adott osztály tagfüggvényének külső definiálásakor (pl. \texttt{void Rectangle::print() \{\dots \}})
+        \item Adott osztály tagfüggvényének külső definiálásakor \\
+        (pl. \texttt{void Rectangle::print() \{\dots \}})
         \item Azonos nevű változó által elfedett globális változó eléréséhez
         \item Statikus adattagok eléréséhez (ld. később)
         \item És még néhány további esetben
