--- a/common/cpp.sty
+++ b/common/cpp.sty
@@ -52,4 +52,4 @@ megtekintéséhez!},icon=Paperclip}
 
 \author{Dr. Hatwagner F. Miklós}
 \institute{Széchenyi István Egyetem, Győr}
-\date{\hiv{\href{https://github.com/wajzy/GKxB\_INTM085.git}{https://github.com/wajzy/GKxB\_INTM085.git}}\\ \today}
+\date{\hiv{\href{https://github.com/wajzy/GKxB\_INTM085}{https://github.com/wajzy/GKxB\_INTM085}}\\ \today}
