--- a/ea01/ea01.tex
+++ b/ea01/ea01.tex
@@ -382,7 +382,7 @@ Rectangle[dimensions: 0 x 0]
     \begin{itemize}
         \item objektum megsemmisülésekor kerül meghívásra
         \item tipikusan a lefoglalt erőforrások felszabadítására használják
-        \item neve \kiemel{~} jellel kezdődik, az osztálynevével folytatódik
+        \item neve \kiemel{\textasciitilde} jellel kezdődik, az osztály nevével folytatódik
         \item nincs visszatérési értéke/típusa
         \item nem fogadhat paramétereket
     \end{itemize}
