--- a/ea01/ea01.tex
+++ b/ea01/ea01.tex
@@ -301,7 +301,7 @@ local i=3
         \item ha nem készítünk konstruktort egy osztályhoz, akkor a fordító létrehoz egy alapértelmezettet (többnyire nem hasznos)
         \item hívásakor ne használjunk zárójelpárt ($\to$ függvény, ami az osztály példányával tér vissza)
     \end{itemize}
-    A konstruktorok felüldefiniálhatók.
+    A konstruktorok felültölthetők.
 \end{frame}
 
 \begin{frame}
