Kis javítások + operátor felültöltés barát függvényekig

--- a/ea02/ea02.tex
+++ b/ea02/ea02.tex
@@ -2,7 +2,7 @@
 \usepackage{../common/cpp}
 
 \title[OO Programozás - C++]{OO Programozás}
-\subtitle{Konstansok}
+\subtitle{Konstansok, származtatás}
 
 \begin{document}
 
